modified:   android/app/capacitor.build.gradle 	modified:   android/app/src/main/AndroidManifest.xml 	modified:   android/capacitor.settings.gradle 	modified:   changelog.txt 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/app.module.ts 	modified:   src/app/models/ilibro.ts 	modified:   src/app/models/iuser.ts 	modified:   src/app/pages/crearlibro/crearlibro.page.ts 	modified:   src/app/pages/home/home.module.ts 	modified:   src/app/pages/home/home.page.html 	modified:   src/app/pages/home/home.page.ts 	new file:   src/app/pages/mapa/mapa-routing.module.ts 	new file:   src/app/pages/mapa/mapa.component.html 	new file:   src/app/pages/mapa/mapa.component.scss 	new file:   src/app/pages/mapa/mapa.component.spec.ts 	new file:   src/app/pages/mapa/mapa.component.ts 	new file:   src/app/pages/mapa/mapa.module.ts 	modified:   src/app/pages/password-reset/password-reset.module.ts 	modified:   src/app/pages/perfil/perfil.module.ts 	modified:   src/app/pages/perfil/perfil.page.html 	modified:   src/app/pages/perfil/perfil.page.scss 	modified:   src/app/pages/perfil/perfil.page.ts 	modified:   src/app/pages/signup/signup.module.ts 	modified:   src/app/pages/signup/signup.page.html 	modified:   src/app/pages/signup/signup.page.ts 	modified:   src/app/services/auth.service.ts 	new file:   src/app/services/googlemaps.service.spec.ts 	new file:   src/app/services/googlemaps.service.ts 	modified:   src/app/services/libros.service.ts 	modified:   src/app/services/usuaris.service.ts 	modified:   src/environments/environment.ts 	modified:   workaround3.txt

--- a/changelog.txt
+++ b/changelog.txt
@@ -33,3 +33,24 @@ master :
 		-PerfilPage: Se agrega listado de libros vendidos y comprados.
 	Servicios:
 		-LibroService: Agregados metodos para obtener libros vendidos y comprados.
+
+26/07/2003:
+	Paginas:
+	   	- Se crea MapaPage. Component modal app-mapa.>
+		-Se modifica perfilpage, se incorporan en el fomuralario datos  de direccion, ciudad, pais y ubicación (latlng)
+	Services:
+		-Se crea servicio googlemaps
+	Interface:
+		- Se agegan los campos direccion, ciudad, pais y ubicación (latlng)
+
+28/07/2023
+	Paginas:
+		-se crea component mapa.
+		- Se modifica Signup, perfil, crearlibro, home para agregar/mostrar datos geolocalizacion
+	Services:
+		-Se crea servicio googlemaps
+	Interfaces:
+		-Se incorporan datos geolocalicación en IUser y ILibro.
+		
+
+
