modified:   android/app/capacitor.build.gradle 	modified:   android/capacitor.settings.gradle 	modified:   changelog.txt 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/pages/home/home.page.ts 	modified:   workaround3.txt

--- a/changelog.txt
+++ b/changelog.txt
@@ -65,6 +65,7 @@ master :
 	-Se incorpora splash e iconos.
 	- Se configura correctamente androidmanifest para incluir la API google.
 	- Se revisan y se arreglan algunos fallos leve.
+	-Se incorpora servicio de mensajeria.
 
 	
 
